--- a/desktop-portfolio/package.json
+++ b/desktop-portfolio/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "optimize-images": "node scripts/optimize-images.mjs",
-    "prebuild": "node scripts/optimize-images.mjs"
+    "generate-og-image": "node scripts/generate-og-image.mjs",
+    "prebuild": "node scripts/optimize-images.mjs && node scripts/generate-og-image.mjs"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -24,6 +25,7 @@
     "sharp": "^0.34.5",
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
+    "vite-prerender-plugin": "^0.5.12",
     "vue-tsc": "^3.1.5"
   }
 }
